# agent-examples

./: sample-environments.yaml
.github/workflows/: build.yaml  ci.yaml
a2a/a2a_contact_extractor/: __main__.py
a2a/a2a_currency_converter/: .env.default  .env.openai
a2a/file_organizer/: pyproject.toml
a2a/file_organizer/src/file_organizer/: agent.py  graph.py  rules.py
a2a/generic_agent/: Dockerfile  README.md  pyproject.toml
a2a/git_issue_agent/: a2a_agent.py
a2a/image_service/: README.md  pyproject.toml
a2a/reservation_service/: .dockerignore  Dockerfile  README.md  pyproject.toml  test_agent.py
a2a/slack_researcher/: a2a_agent.py
a2a/weather_service/: .env.ollama  .env.openai  Dockerfile  pyproject.toml
acp/acp_slack_assistant/: README.md  pyproject.toml
mcp/: README.md
mcp/cloud_storage_tool/: .env.template  Dockerfile  README.md  cloud_storage_tool.py  pyproject.toml
mcp/flight_tool/: Dockerfile  README.md  __init__.py  flight_tool.py  inspector.config.json  pyproject.toml
mcp/github_tool/: Dockerfile  README.md
mcp/image_tool/: Dockerfile  README.md  image_render  image_tool.py  pyproject.toml  resp.json
mcp/movie_tool/: Dockerfile  README.md  movie_tool.py  (+1 more)
mcp/reservation_tool/: .dockerignore  Dockerfile  PLAN.md  README.md  __init__.py  demo.sh  pyproject.toml  reservation_tool.py  schemas.py
mcp/reservation_tool/providers/: __init__.py  base.py  mock.py
mcp/reservation_tool/tests/: __init__.py  test_reservation_tool.py
mcp/shopping_tool/: .gitignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  __init__.py  config.example  pyproject.toml  shopping_agent.py
(+36 files in other folders)
